fixing on the news layout problem

--- a/css/main.css
+++ b/css/main.css
@@ -854,7 +854,7 @@ footer .wrapper {
     display: none !important; } }
 @media (max-width: 568px) {
   html {
-    font-size: 13px; }
+    font-size: 12px; }
 
   .wrapper {
     width: 95% !important; }
@@ -863,6 +863,9 @@ footer .wrapper {
     width: 100% !important;
     text-align: center !important; }
   section.about .divider {
+    display: none; }
+
+  section.advice .divider {
     display: none; } }
 
 /*# sourceMappingURL=main.css.map */
